# CppBookProject

./: .gitignore  CMakeLists.txt  Doxyfile  GTestCMakeLists.txt.in  README.md  analysis.cppcheck
HttpProject/: CMakeLists.txt
HttpProject/include/: Address.h  FdSet.h  HttpFrame.h  HttpRequestFrame.h  HttpResponseFrame.h  Networking.h  Port.h  SSLSocket.h  Socket.h
HttpProject/src/: Address.cpp  Networking.cpp  Port.cpp  SSLSocket.cpp  main.cpp
HttpProject/test/: CMakeLists.txt  ChunkedTest.cpp  MockPort.h  QueryTest.cpp  SocketTest.cpp
